--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -41,6 +41,8 @@ These are the projects I am working on during the my rotation in the Stephens la
 
 * [Look at technical factors using ERCC in single cell only](ERCC_sc_only.html)
 
+* [Look at expression in singleton vs non singleton expression](non_singleton_expression.html)
+
 Continue the Gilad single cell anaylsis:  
 
 * [Create gene-x-sample count matrices and annotation file](gene_x_sample_count_matrix.html)  
